force-app/main/default/objects/JBCXM__Log__c/fields/JBCXM__ExceptionDescription__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ExceptionDescription__c</fullName>
    <description>This will system exception and business exception code like &quot;DML Exception &quot;
,&quot;Account Not Found&quot; with detail messages</description>
    <inlineHelpText>Enter system exception and business exception code like &quot;DML Exception &quot;
,&quot;Account Not Found&quot; with detail messages</inlineHelpText>
    <label>Exception Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>