force-app/main/default/objects/JBCXM__Log__c/fields/JBCXM__SourceData__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SourceData__c</fullName>
    <description>This will store the source data on which log is created</description>
    <inlineHelpText>Source data on which log is created</inlineHelpText>
    <label>Source Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>