force-app/main/default/objects/JBCXM__Log__c/fields/JBCXM__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SourceObject__c</fullName>
    <description>This will store Source Object  like &quot;Alert&quot;,&quot;SurveyResponses&quot;  and &quot;Transactions&quot; etc</description>
    <inlineHelpText>Source Object  like &quot;Alert&quot;,&quot;SurveyResponses&quot;  and &quot;Transactions&quot; etc</inlineHelpText>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>