force-app/main/default/objects/JBCXM__Log__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <description>This stores types like &quot;API&quot;,&quot;Application&quot;  and &quot;Other&quot; etc</description>
    <inlineHelpText>Types like &quot;API&quot;,&quot;Application&quot;  and &quot;Other&quot; etc</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>